Fixed the gap appearing between sidebar and content on over scrolling window

--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -26,6 +26,12 @@ $base-class: app;
   }
 
   &__sidebar {
+    position: fixed;
+    height: 100%;
+    z-index: 1000;
+  }
+
+  &__sidebar-static {
     height: 100%;
     z-index: 1000;
   }
